Move a bunch of stuff around, cleanup some links, and add a demo CNAME

--- a/about.html
+++ b/about.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
-<link href='https://fonts.googleapis.com/css?family=Epilogue' rel='stylesheet'>
-<link rel="stylesheet" href="../css/navbar.css">
-<link rel="stylesheet" href="../css/buttons.css">
+
+<link rel="stylesheet" href="./css/navbar.css">
+<link rel="stylesheet" href="./css/buttons.css">
 <!-- Add icon library -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-
 <head>
   <title>Napkind - The Enivronmentaly Friendly Upcycled Utensil Travel Pouch</title>
-  <link rel="icon" type="image/x-icon" href="../images/fav.ico">
+  <link rel="icon" type="image/x-icon" href="./images/fav.ico">
   <meta charset="UTF-8">
   <meta name="description" content="Enivronmentaly friendly upcycled utensil travel pouch with built in napkin.">
   <meta name="keywords" content="HTML, CSS">
@@ -23,7 +22,7 @@
 }
 
 body {
-  font-family: Epilogue, Garamond, Arial, Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 /* Style the header */
@@ -62,20 +61,19 @@ div {line-height:30px;}
 
 <header>
   <div class="topnav">
-    <a class="active" href="napkind.html">Napkind</a>
+    <a href="index.html">Napkind</a>
     <a href="fabric.html">Fabric</a>
-    <a href="about.html">About</a>
-    <a href="Share.html">Share</a>
+    <a class="active" href="about.html">About</a>
+    <a href="share.html">Share</a>
   </div>
 </header>
 
 <section>
   <article>
   <p> 
-  <img src="../images/napkind.jpg" alt="Napkind" style="width:50%;float:right;margin-left:15px;">   
-  <div> Move beyond disposable utensils and napkins. With the slim profile of Napkind it’s easy to bring your own. 
-Designed to be easy to wash, the snug fit holds utensils tight, keeping them and your bag clean. Each is handmade 
-with upcycled material to have a further positive impact on the planet.
+  <img src="./images/napkindsmany.jpg" alt="Many_Napkinds" style="width:50%;float:right;margin-left:15px;">   
+  <div> Frustrated by the proliferation of plastic utensils, 
+but unable to find a product that fit our bags and our lifestyles gave rise to Napkind.
   </div>
   </p>
   </article>
