--- a/contest.html
+++ b/contest.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 
-<link rel="stylesheet" href="../css/navbar.css">
-<link rel="stylesheet" href="../css/buttons.css">
+<link rel="stylesheet" href="./css/navbar.css">
+<link rel="stylesheet" href="./css/buttons.css">
 <!-- Add icon library -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <head>
   <title>Napkind - The Enivronmentaly Friendly Upcycled Utensil Travel Pouch</title>
-  <link rel="icon" type="image/x-icon" href="../images/fav.ico">
+  <link rel="icon" type="image/x-icon" href="./images/fav.ico">
   <meta charset="UTF-8">
   <meta name="description" content="Enivronmentaly friendly upcycled utensil travel pouch with built in napkin.">
   <meta name="keywords" content="HTML, CSS">
@@ -61,22 +61,25 @@ div {line-height:30px;}
 
 <header>
   <div class="topnav">
-    <a href="napkind.html">Napkind</a>
+    <a href="index.html">Napkind</a>
     <a href="fabric.html">Fabric</a>
     <a href="about.html">About</a>
-    <a class="active" href="Share.html">Share</a>
+    <a href="share.html">Share</a>
+    <a class="active" href="contest.html">Contest</a>
   </div>
 </header>
 
 <section>
   <article>
   <p> 
-  <img src="../images/bag.jpg" alt="Napkind_In_Use" style="width:50%;float:right;margin-left:15px;">   
-  <div> What are you going to do to make the world a kinder, cleaner place?  
-Share your pictures of the Napkind in action.  Share your kindnesses.  
-We would love to <a href="mailto:the.napkind@gmail.com">hear</a> from you! Comments may be posted on 
-<a href="http://instagram.com/_u/the_napkind/" >Instagram</a>, unless otherwise requested.
-  </p>
+  <img src="./images/coloringpage.jpg" alt="Many_Napkinds" style="width:50%;float:right;margin-left:15px;">   
+  <div> <b>Coloring contest!  Win your own Napkind!  </b> 
+Please sumbit entries to the.napkind@gmail.com. <a href="coloringpage.html">Coloring Page only for printing</a></div>
+
+<p>The fine print.   Winner will be determined by 4/? and conacted by email.  
+Submission gives permission for Napkind 
+to use image on this website, instagram, or other Napkind marketing.  
+</p>
   </article>
 </section>
 
