--- a/fabric.html
+++ b/fabric.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 
-<link rel="stylesheet" href="../css/navbar.css">
-<link rel="stylesheet" href="../css/buttons.css">
+<link rel="stylesheet" href="./css/navbar.css">
+<link rel="stylesheet" href="./css/buttons.css">
 <!-- Add icon library -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <head>
   <title>Napkind - The Enivronmentaly Friendly Upcycled Utensil Travel Pouch</title>
-  <link rel="icon" type="image/x-icon" href="../images/fav.ico">
+  <link rel="icon" type="image/x-icon" href="./images/fav.ico">
   <meta charset="UTF-8">
   <meta name="description" content="Enivronmentaly friendly upcycled utensil travel pouch with built in napkin.">
   <meta name="keywords" content="HTML, CSS">
@@ -61,25 +61,29 @@ div {line-height:30px;}
 
 <header>
   <div class="topnav">
-    <a href="napkind.html">Napkind</a>
-    <a href="fabric.html">Fabric</a>
+    <a href="index.html">Napkind</a>
+    <a class="active"  href="fabric.html">Fabric</a>
     <a href="about.html">About</a>
-    <a href="Share.html">Share</a>
-   <a class="active" href="contest.html">Contest</a>
+    <a href="share.html">Share</a>
   </div>
 </header>
 
 <section>
   <article>
   <p> 
-  <img src="../images/coloringpage.jpg" alt="Many_Napkinds" style="width:50%;float:right;margin-left:15px;">   
-  <div> <b>Coloring contest!  Win your own Napkind!  </b> 
-Please sumbit entries to the.napkind@gmail.com. <a href="coloringpage.html">Coloring Page only for printing</a></div>
-
-<p>The fine print.   Winner will be determined by 4/? and conacted by email.  
-Submission gives permission for Napkind 
-to use image on this website, instagram, or other Napkind marketing.  
-</p>
+  <img src="./images/rip.jpg" alt="Ripped_Fabric" style="width:50%;float:right;margin-left:15px;">   
+  <div>
+The average garment gets worn seven times before it gets thrown out.* 
+ Be a part of the solution.  Donate it if its still good enough to wear.  If it’s ripped or 
+stained there is still a chance to give it a second life. Hyperlocal donations accepted in 
+Pennsylvania Chester/ Delaware/ Montgomery counties. 
+Accepting woven cotton/cotton blend (like men’s dress shirts, and sheets) not knit cotton (like tshirts) which 
+are too stretchy.
+<div>
+<cite style="font-size: 15px;"> *Thomas, Dana, 1964- author. <a href="https://www.penguinrandomhouse.com/books/667371/fashionopolis-young-readers-edition-by-dana-thomas/"> Fashionopolis : the Secrets Behind the Clothes We Wear.</a> New York :Penguin Press, 2022.</cite>
+  </div>
+</div>
+  </p>
   </article>
 </section>
 
