--- a/share.html
+++ b/share.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 
-<link rel="stylesheet" href="../css/navbar.css">
-<link rel="stylesheet" href="../css/buttons.css">
+<link rel="stylesheet" href="./css/navbar.css">
+<link rel="stylesheet" href="./css/buttons.css">
 <!-- Add icon library -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <head>
   <title>Napkind - The Enivronmentaly Friendly Upcycled Utensil Travel Pouch</title>
-  <link rel="icon" type="image/x-icon" href="../images/fav.ico">
+  <link rel="icon" type="image/x-icon" href=".images/fav.ico">
   <meta charset="UTF-8">
   <meta name="description" content="Enivronmentaly friendly upcycled utensil travel pouch with built in napkin.">
   <meta name="keywords" content="HTML, CSS">
@@ -61,20 +61,21 @@ div {line-height:30px;}
 
 <header>
   <div class="topnav">
-    <a href="napkind.html">Napkind</a>
+    <a href="index.html">Napkind</a>
     <a href="fabric.html">Fabric</a>
-    <a class="active" href="about.html">About</a>
-    <a href="Share.html">Share</a>
+    <a href="about.html">About</a>
+    <a class="active" href="share.html">Share</a>
   </div>
 </header>
 
 <section>
   <article>
   <p> 
-  <img src="../images/napkindsmany.jpg" alt="Many_Napkinds" style="width:50%;float:right;margin-left:15px;">   
-  <div> Frustrated by the proliferation of plastic utensils, 
-but unable to find a product that fit our bags and our lifestyles gave rise to Napkind.
-  </div>
+  <img src="./images/bag.jpg" alt="Napkind_In_Use" style="width:50%;float:right;margin-left:15px;">   
+  <div> What are you going to do to make the world a kinder, cleaner place?  
+Share your pictures of the Napkind in action.  Share your kindnesses.  
+We would love to <a href="mailto:the.napkind@gmail.com">hear</a> from you! Comments may be posted on 
+<a href="http://instagram.com/_u/the_napkind/" >Instagram</a>, unless otherwise requested.
   </p>
   </article>
 </section>
