--- a/coloringpage.html
+++ b/coloringpage.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Napkind - The Enivronmentaly Friendly Upcycled Utensil Travel Pouch</title>
-  <link rel="icon" type="image/x-icon" href="../images/fav.ico">
+  <link rel="icon" type="image/x-icon" href="./images/fav.ico">
   <meta charset="UTF-8">
   <meta name="description" content="Enivronmentaly friendly upcycled utensil travel pouch with built in napkin.">
   <meta name="keywords" content="HTML, CSS">
@@ -12,7 +12,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <body>
-  <img src="../images/coloringpage.jpg" alt="coloring-page" style="width:100%;">   
+  <img src="./images/coloringpage.jpg" alt="coloring-page" style="width:100%;">   
 </body>
 </html>
 
