--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
-
-<link rel="stylesheet" href="../css/navbar.css">
-<link rel="stylesheet" href="../css/buttons.css">
+<link href='https://fonts.googleapis.com/css?family=Epilogue' rel='stylesheet'>
+<link rel="stylesheet" href="./css/navbar.css">
+<link rel="stylesheet" href="./css/buttons.css">
 <!-- Add icon library -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+
 <head>
   <title>Napkind - The Enivronmentaly Friendly Upcycled Utensil Travel Pouch</title>
-  <link rel="icon" type="image/x-icon" href="../images/fav.ico">
+  <link rel="icon" type="image/x-icon" href="./images/fav.ico">
   <meta charset="UTF-8">
   <meta name="description" content="Enivronmentaly friendly upcycled utensil travel pouch with built in napkin.">
   <meta name="keywords" content="HTML, CSS">
@@ -22,7 +23,7 @@
 }
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Epilogue, Garamond, Arial, Helvetica, sans-serif;
 }
 
 /* Style the header */
@@ -61,28 +62,21 @@ div {line-height:30px;}
 
 <header>
   <div class="topnav">
-    <a href="napkind.html">Napkind</a>
-    <a class="active"  href="fabric.html">Fabric</a>
+    <a class="active" href="index.html">Napkind</a>
+    <a href="fabric.html">Fabric</a>
     <a href="about.html">About</a>
-    <a href="Share.html">Share</a>
+    <a href="share.html">Share</a>
   </div>
 </header>
 
 <section>
   <article>
   <p> 
-  <img src="../images/rip.jpg" alt="Ripped_Fabric" style="width:50%;float:right;margin-left:15px;">   
-  <div>
-The average garment gets worn seven times before it gets thrown out.* 
- Be a part of the solution.  Donate it if its still good enough to wear.  If it’s ripped or 
-stained there is still a chance to give it a second life. Hyperlocal donations accepted in 
-Pennsylvania Chester/ Delaware/ Montgomery counties. 
-Accepting woven cotton/cotton blend (like men’s dress shirts, and sheets) not knit cotton (like tshirts) which 
-are too stretchy.
-<div>
-<cite style="font-size: 15px;"> *Thomas, Dana, 1964- author. <a href="https://www.penguinrandomhouse.com/books/667371/fashionopolis-young-readers-edition-by-dana-thomas/"> Fashionopolis : the Secrets Behind the Clothes We Wear.</a> New York :Penguin Press, 2022.</cite>
+  <img src="./images/napkind.jpg" alt="Napkind" style="width:50%;float:right;margin-left:15px;">   
+  <div> Move beyond disposable utensils and napkins. With the slim profile of Napkind it’s easy to bring your own. 
+Designed to be easy to wash, the snug fit holds utensils tight, keeping them and your bag clean. Each is handmade 
+with upcycled material to have a further positive impact on the planet.
   </div>
-</div>
   </p>
   </article>
 </section>
