--- a/index.html
+++ b/index.html
@@ -73,9 +73,10 @@ div {line-height:30px;}
   <article>
   <p> 
   <img src="./images/napkind.jpg" alt="Napkind" style="width:50%;float:right;margin-left:15px;">   
-  <div> Move beyond disposable utensils and napkins. With the slim profile of Napkind it’s easy to bring your own. 
-Designed to be easy to wash, the snug fit holds utensils tight, keeping them and your bag clean. Each is handmade 
-with upcycled material to have a further positive impact on the planet.
+  <div> Meet Napkind! Move beyond disposable utensils and napkins with a first-of-its-kind travel pouch that enables you to bring your own 
+    utensils wherenver you go. Made of stylish upcycled fabric, Napkind is easy to throw in your bag - and the wash - and its slim profile 
+    holds your utensils tight. Each is handmade with love in Wayne, Pennsylvania.
+
   </div>
   </p>
   </article>
